Feat: Fixed Liked Videos Response

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tailorkart-backend",
+  "name": "vidtube-backend",
   "version": "1.0.0",
   "description": "This is a backend for tailorkart Ecommerce Application",
   "main": "index.js",
